<resources>
    <string name="app_name">RoomApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="s_inscrire">Inscription</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="age">Age</string>
    <string name="ajouter">Ajouter</string>
    <string name="yann">Yann</string>
    <string name="bemba">Bemba</string>
    <string name="ageUser">19</string>
    <string name="modif">Modification</string>
    <string name="modifier">Modifier</string>
</resources>