<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.update.UpdateFragment">

    <TextView
        android:id="@+id/tvUpdateInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/modif"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUpdateInscription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_ajouter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUpdateNom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="50dp"
            android:hint="@string/nom"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/grey"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/grey"
            app:startIconDrawable="@drawable/ic_account_box"
            app:startIconTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUpdatePrenom"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="50dp"
            android:hint="@string/prenom"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/grey"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/grey"
            app:startIconDrawable="@drawable/ic_account_box"
            app:startIconTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUpdateAge"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginTop="50dp"
            android:hint="@string/age"
            android:textColorHint="@color/grey"
            app:boxStrokeColor="@color/grey"
            app:boxStrokeWidthFocused="2dp"
            app:hintTextColor="@color/grey"
            app:startIconDrawable="@drawable/ic_fiber"
            app:startIconTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_update"
        android:layout_width="220dp"
        android:layout_height="69dp"
        android:layout_marginBottom="188dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/modifier"
        android:textSize="17sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_fiber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>